k8s/statistics-sender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-sender
  labels:
    owner : xonest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-sender
  template:
    metadata:
      labels:
        app: statistics-sender
    spec:
      containers:
        - name: statistics-sender
          image: xonest/statistics-sender:latest
          ports:
            - name: grpc
              containerPort: 50051
            - name: http
              containerPort: 8841
