k8s/admin-panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
  labels:
    owner : xonest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-panel
  template:
    metadata:
      labels:
        app: admin-panel
    spec:
      containers:
        - name: admin-panel
          image: xonest/admin-panel:latest
          ports:
            - name: grpc
              containerPort: 50051
            - name: http
              containerPort: 8841
---

apiVersion: v1
kind: Service
metadata:
  name: admin-panel-clusterip
spec:
  type: ClusterIP
  selector:
    app: admin-panel
  ports:
    - name: grpc
      protocol: TCP
      port: 50051 # Порт внешний
      targetPort: 50051 # Порт пода

    - name: http
      protocol: TCP
      port: 8841 # Порт внешний
      targetPort: 8841 # Порт пода

---

apiVersion: v1
kind: Service
metadata:
  name: admin-panel-nodeport
spec:
  type: NodePort
  selector:
    app: admin-panel
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
      name: grpc
      nodePort: 30002

    - port: 8841
      targetPort: 8841
      protocol: TCP
      name: http
      nodePort: 30003
