k8s/clickhouse.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse
spec:
  serviceName: "clickhouse"
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: yandex/clickhouse-server:latest
          ports:
            - name: tcp
              containerPort: 9000
            - name: http
              containerPort: 8123
          volumeMounts:
            - name: clickhouse-data
              mountPath: /var/lib/clickhouse
      volumes:
        - name: clickhouse-data
          persistentVolumeClaim:
            claimName: clickhouse-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: clickhouse-nodeport
spec:
  type: NodePort
  selector:
    app: clickhouse
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
      nodePort: 30000

    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: tcp
      nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: clickhouse-clusterip
spec:
  type: ClusterIP
  selector:
    app: clickhouse
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http

    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: tcp
