k8s/zookeeper.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: zookeeper-data
              mountPath: /data
      volumes:
        - name: zookeeper-data
          persistentVolumeClaim:
            claimName: zookeeper-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper-clusterip
spec:
  selector:
    app: zookeeper
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: 2181
      protocol: TCP
